--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/dgknght/money-cli#readme",
   "dependencies": {
     "chalk": "^4.1.1",
-    "figlet": "^1.5.0"
+    "figlet": "^1.5.0",
+    "minimist": "^1.2.5"
   }
 }
