--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/dgknght/money-cli#readme",
   "dependencies": {
     "chalk": "^4.1.1",
+    "clui": "^0.3.6",
     "figlet": "^1.5.0",
     "minimist": "^1.2.5"
   }
