--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "chalk": "^4.1.1",
     "clui": "^0.3.6",
     "configstore": "^6.0.0",
+    "date-fns": "^2.23.0",
     "figlet": "^1.5.0",
-    "minimist": "^1.2.5",
-    "netrc": "^0.1.4"
+    "netrc": "^0.1.4",
+    "yargs": "^17.0.1"
   }
 }
