--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -36,6 +38,9 @@
     "yargs": "^17.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vitest": "^0.5.4",
     "vitest": "^4.0.3"
   }
 }
